--- a/planning.tex
+++ b/planning.tex
@@ -394,6 +394,7 @@ Note that the Bayesian analysis is a more sophisticated technique than the null 
 significance testing, as it allows us to estimate the probability of the performance of
 the solution being better than a certain threshold.
 
+% TODO: fix all textcite
 Also, be aware that the choice of the model and the prior distribution can affect the
 results.  \textcite{Benavoli2017} suggest using 10 repetitions of 10-fold cross-validation
 to estimate the parameters of the generative model.  They also show experimental evidence
