--- a/references.bib
+++ b/references.bib
@@ -635,3 +635,16 @@ author = {Freek Stulp and Olivier Sigaud},
   publisher={Springer Nature},
   url={https://szeliski.org/Book/}
 }
+
+@article{Williams2021,
+    author = {Williams, Christopher K. I.},
+    title = {The Effect of Class Imbalance on Precision-Recall Curves},
+    journal = {Neural Computation},
+    volume = {33},
+    number = {4},
+    pages = {853-857},
+    year = {2021},
+    month = {04},
+    issn = {0899-7667},
+    doi = {10.1162/neco_a_01362},
+}
