Transliterating so it compiles with pdflatex.

--- a/data.tex
+++ b/data.tex
@@ -283,8 +283,8 @@ we can classify it.  In particular, ontology describes the nature of categories,
 properties, and relations.
 
 Aristotle (384 -- 322 BC) is one of the first philosophers to study ontology. In
-Κατηγορίαι\footnote{For Portuguese readers, I suggest \fullcite{CategoriesUnesp}.}, he
-proposed a classification of the world into ten categories. Substance, or οὐσία,
+Categories\footnote{For Portuguese readers, I suggest \fullcite{CategoriesUnesp}.}, he
+proposed a classification of the world into ten categories. Substance, or ousia,
 is the most important one.  It is the category of being.  The other categories
 are properties, quantity, quality, relation, place, time, position, state, and action.
 
