--- a/history.tex
+++ b/history.tex
@@ -41,7 +41,7 @@ study.  In the following, I emphasize the history of a few notable usages of the
 
 \paragraph{Peter Naur (1928 -- 2016)}
 
-The term ``data science'' itself was coined in the 1960s by Peter Naur (/naʊə/). Naur was
+The term ``data science'' itself was coined in the 1960s by Peter Naur. Naur was
 a Danish computer scientist and mathematician who made significant contributions to the
 field of computer science, including his work on the development of programming
 languages\footnote{He is best remembered as a contributor, with John Backus, to the
