--- a/references.bib
+++ b/references.bib
@@ -431,7 +431,7 @@ isbn="978-3-319-17091-6"
 
 @book{CategoriesUnesp,
   author = {Aristotle},
-  title = {Categorias (Κατηγορiαι)},
+  title = {Categorias},
   translator = {José Veríssimo Teixeira da Mata},
   language = {greek and portuguese},
   publisher = {Editora Unesp},
