--- a/structured.tex
+++ b/structured.tex
@@ -783,7 +783,7 @@ formal proof.  Since tidy data focuses on data analysis and not on data storage,
 that there is more than one way to organize the data in a tidy format.  It actually
 depends on what you define as the observational unit.
 
-Moreover, both of them are related to the philosophical concept of substance (οὐσία) ---
+Moreover, both of them are related to the philosophical concept of substance (ousia) ---
 see \cref{sub:phenomena}.
 Entities and observational units are substances while attributes are predicates.
 Each tuple or observation is a primary substance, i.e., a substance that contrasts with
