--- a/main.tex
+++ b/main.tex
@@ -8,11 +8,10 @@
 \addbibresource{references.bib}
 
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{blkarray}
 \usepackage[colorlinks]{hyperref}
-\usepackage{xltxtra}
-\usepackage[warnings-off={mathtools-colon,mathtools-overbracket}]{unicode-math}
 \usepackage{graphicx}
 \usepackage[super]{nth}
 \usepackage{booktabs}
